--- a/lams_central/web/css/addLesson.css
+++ b/lams_central/web/css/addLesson.css
@@ -25,8 +25,8 @@
 }
 
 #content .panel-monitor-page, #content .panel-monitor-body  {
-	margin-bottom: 0;
-	padding-bottom: 0;
+	margin: 0;
+	padding: 0;
 }
 
 #content .navbar-collapse {
