--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -1,8 +1,8 @@
 body {
-    width: 100%;
+	width: 100%;
 	overflow-x: hidden;
-    font-size: 13px;
-    background: url('/lams/images/css/light-fabric.jpg');
+	font-size: 13px;
+	background: url(/lams/images/css/light-fabric.jpg);
 }
 html {
 	height: 100%;
@@ -12,7 +12,7 @@ html {
 	width: 220px;
 	z-index: 10;
 	height: 100%;
-	background: #2f4050;
+	background: #164276;
 	color: #E7E7E7;
 }
 .courses-title {
@@ -75,16 +75,10 @@ html {
 footer {
 	width: 100%;
 	font-size: 75%;
-	background-color: #fff;
-}
-.text-muted {
-    color: #777;
-}
-.text-center {
-    text-align: center;
+	background-color: #FFF;
 }
 a {
-    color: #5A738E;
+    color: #5A738E; 
     text-decoration: none;
 }
 
@@ -94,7 +88,7 @@ a {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.16);
 }
 #favorite-organisations > li > a, .tablesorter a {
-    color: #a7b1c2;
+    color: #A7B1C2;
     font-weight: 400;
     padding: 14px 20px 14px 25px;
 }
@@ -103,7 +97,7 @@ a {
 .pagesize:hover,
 .tablesorter a:hover,
 .tablesorter a:focus {
-  background-color: #293846;
+  background-color: #072B57;
   color: white;
 }
 .tablesorter a {
@@ -114,58 +108,57 @@ a {
 #offcanvas .active > a,
 #offcanvas .active > a:hover,
 #offcanvas .active > a:focus {
-  background: #293846;
+	background: #2B5B95;
 }
 #offcanvas .active > a {
     color: #ffffff;
 }
 #offcanvas td.active {
-    border-right: 10px solid #19aa8d;
-    background: #293846;
+    border-right: 10px solid #0E9AEF;
+    background: #2B5B95;
 }
 .offcanvas-logo {
 	padding: 20px 0px 0px 25px;
-    background-color: #293846;
+    background-color: #072B57;
 }
 .offcanvas-logo img{
 	width: 100px;
 }
 .offcanvas-header {
 	padding: 15px 0px 0px 0px;
-    background-color: #293846;
 }
 .offcanvas-search {
 	padding: 15px 19px 15px;
 	margin-bottom: 0;
 }
 .offcanvas-search .form-control {
-    box-shadow: inset 0 1px 0px rgba(208, 206, 206, 0.25);
-    border-radius: 25px;
-    padding-left: 20px;
-    border: 1px solid rgba(221, 226, 232, 0.49);
-	background: #2f4050;
-	color: #a7b1c2;
+	box-shadow: inset 0 1px 0px rgba(208, 206, 206, 0.25);
+	border-radius: 25px;
+	padding: 2px 5px;
+	line-height: 1;
+	border: 1px solid rgba(221, 226, 232, 0.49);
+	background: #072B57; 
 }
 .offcanvas-search .form-control::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: #a7b1c2;
+    color: #ddd;
 }
 .offcanvas-search .form-control:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color: #a7b1c2;
+   color: #ddd;
 }
 .offcanvas-search .form-control::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color: #a7b1c2;
+   color: #ddd;
 }
 .offcanvas-search .form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: #a7b1c2;
+   color: #ddd;
 }
 .ts-pager {
 	text-align: center;
     padding: 0 10px 10px;
-    color: #a7b1c2;
+    color: #A7B1C2;
 }
 .ts-pager .btn{
-	color: #2f4050;
-    background-color: #a7b1c2;
+	color: #164276;
+    background-color: #A7B1C2;
     padding: 2px 5px;
     line-height: 1;
 }
@@ -173,13 +166,13 @@ a {
 	font-size: 11px;
 }
 .tablesorter tfoot th {
-	background-color: #293846 !important;
+	background-color: #072B57 !important;
 	padding: 10px 0;
 }
 
 .pagesize {
     border: 1px solid rgba(221, 226, 232, 0.49);
-    background: #2f4050;
+    background: #164276;
     cursor: pointer;
 }
 
@@ -442,7 +435,7 @@ ul.dropdown-usermenu li {
 
 .j-single-lesson:hover .lesson-actions {
 	opacity: 1;
-	filter: alpha(opacity = 100); /* msie */
+	// filter: alpha(opacity = 100); /* msie */
 	display: block;
 }
 
@@ -469,7 +462,7 @@ ul.dropdown-usermenu li {
 	float: right;
 	font-size: 1.2em;
 	opacity: 0.3;
-	filter: alpha(opacity = 10); /* msie */
+	/* filter: alpha(opacity = 10); msie */
 }
 
 .lesson-actions a {
@@ -541,12 +534,12 @@ a.sorting {
 }
 .course-header {
 	padding-bottom: 5px; 
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #EEE;
 }
 .course-header i{
 	font-size: 16px;
 }
 
 .j-course-contents {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #EEE;
 }
