LDEV-3834: Fix groups to branches mapping dialog. Several other minor fixes.

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -236,7 +236,7 @@ div.branchMappingDialog > table {
 	width: 100%;
 	height: 98%;
 	table-layout: fixed;
-	border-collapse: collapse;outputConditionsDialogContents
+	border-collapse: collapse;
 }
 
 div.branchMappingDialog td {
