--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -335,6 +335,10 @@ nav.navbar-heading {
 	cursor: pointer;
 }
 
+ul.dropdown-menu {
+	left: auto;
+	right: 0;
+}
 
 /** Authoring */
 /*layout of adding a topic button */
