LDEV-4014: Tune sequenceInfoDialog.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -293,6 +293,10 @@ div#completedLearnersContainer span {
 	margin-right: 5px;
 }
 
+#sequenceInfoDialog {
+	cursor: pointer;
+}
+
 /********** LEARNERS TAB STYLES **********/
 #tabLearnerControlTable td {
 	padding: 0px;
