--- a/lams_learning/web/css/presence.css
+++ b/lams_learning/web/css/presence.css
@@ -3,10 +3,10 @@
 }
 
 #presenceChat {
-	position: absolute;
+	position: fixed;
 	width: 640px;
 	height: 300px;
-	right: 18px;
+	right: 5px;
 	z-index: 10;
 }
 
@@ -17,13 +17,11 @@
 	width: 73%;
 	height: 260px;
 	font-size: 14px !important;
-}
-
-#presenceChatTabs ul a {
-	color: #337ab7;
+	border: 1px solid #aaaaaa;
 }
 
 #presenceChatTabs li a {
+	color: black;
 	border-bottom: none;
 }
 
@@ -34,8 +32,8 @@
 
 #presenceChatRoster {
 	position: absolute;
-	right: 0pt;
-	bottom: 0pt;
+	right: 0;
+	bottom: 0;
 	width: 25%;
 	height: 100%;
 	background-color: #FFFFFF;
@@ -45,7 +43,6 @@
 #presenceUserCount {
 	text-align: center;
 	cursor: pointer;
-	color: #337ab7;
     background-color: #f5f5f5;
   	border-color: #ddd !important;
     border-bottom: 1px solid transparent;
@@ -53,7 +50,7 @@
 
 #presenceUserListings{
 	padding: 5px;
-	height: 255px;
+	height: 275px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
@@ -84,7 +81,7 @@
 
 .messageArea {
 	width: 100%;
-	height: 195px;
+	height: 170px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
