LDEV-4020: Allow maximising and minimising of activity authoring dialogs.

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -70,6 +70,46 @@ div.dialogContents, #ldScreenshotAuthor, #ldScreenshotLoading {
 	border: none;
 }
 
+#dialogMinContainer {
+	height: 35px;
+	bottom: 1px;
+	left: 1px;
+	position: fixed;
+	right: 1px;
+	z-index: 9999;
+}
+
+.dialogMin {
+	overflow: hidden !important;
+	padding: 0 !important;
+	margin: 0 10px 0 0;
+	float: left;
+	position: static !important;
+	width: 257px !important;
+}
+
+.dialogMin .modal-title {
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.dialogMin .modal-dialog {
+	left: 0 !important;
+	top: 0 !important;
+}
+
+.dialogMin .modal-dialog, .dialogMin .modal-content {
+	width: 250px !important;
+	height: 35px !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.dialogMin .modal-header {
+	height: 100%;
+	margin: 0 !important;
+	padding: 3px 5px !important;
+}
 
 div.smallHeader .modal-header {
 	padding: 5px;
