--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -342,22 +342,14 @@ ul.dropdown-usermenu li {
 	cursor: move;
 }
 
-#dialogMinContainer {
-	height: 35px;
-	bottom: 1px;
-	left: 1px;
-	position: fixed;
-	right: 1px;
-	z-index: 9999;
-}
-
 .dialogMin {
+	top: auto !important;
+	bottom: 5px !important;
 	overflow: hidden !important;
 	padding: 0 !important;
-	margin: 0 10px 0 0;
-	float: left;
-	position: static !important;
-	width: 257px !important;
+	position: fixed !important;
+	width: 250px !important;
+	height: 35px !important;
 }
 
 .dialogMin .modal-title {
@@ -381,6 +373,7 @@ ul.dropdown-usermenu li {
 	height: 100%;
 	margin: 0 !important;
 	padding: 3px 5px !important;
+	cursor: default !important;
 }
 
 .ui-dialog .ui-dialog-content {
