LDEV-3676: Fixing th and panel-title and panel-heading

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -191,8 +191,18 @@ LAMS Learner Style
 }
 .panel-title {
 	font-size: inherit;
-	font-weight: bolder;
+	font-weight: 500;
 }
+.panel-heading {
+  padding: 7px 10px;
+}
+
+th {
+	font-weight: normal;
+	font-style: italic;
+	
+}
+
 body.stripes {
   background: url('/lams/images/css/light-fabric.jpg');
 }
