LDEV-4036 Readjust thickbox positioning

--- a/lams_tool_assessment/web/includes/css/addQuestion.css
+++ b/lams_tool_assessment/web/includes/css/addQuestion.css
@@ -33,3 +33,8 @@ table.alternative-color td {
 	width: 0;
 	float: right !important;
 }
+
+/* overwriting bootstrap value. */
+.panel {
+	margin-bottom: 0 !important;
+}
