LDEV-3804: arrange layout to fit bootstrap authoring better

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -636,3 +636,9 @@ section{
 	padding-top: 2px;
 	border-top: 1px solid#e7e7e7;
 }
+
+/* fontawesome icon x-small */
+.fa-xs {
+	font-size: smaller;
+}
+}
