--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -214,7 +214,7 @@ div#ldStoreDialogContents #ldStoreDialogAccessCell {
 }
 
 div#ldStoreDialogContents #ldStoreDialogAccessCell > div#ldStoreDialogAccessTitle {
-	font-size: 11px;
+	font-size: 13px;
 	font-weight: bold;
 	text-align: center;
 }
@@ -222,6 +222,9 @@ div#ldStoreDialogContents #ldStoreDialogAccessCell > div#ldStoreDialogAccessTitl
 div#ldStoreDialogContents #ldStoreDialogAccessCell > div.access {
 	padding: 3px 0 3px 3px;
 	cursor: pointer;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: small;
 }
 
 div#ldStoreDialogContents #ldStoreDialogAccessCell > div.selected {
