LDEV-3716: fixing growl formatting

--- a/lams_tool_assessment/web/includes/css/assessment.css
+++ b/lams_tool_assessment/web/includes/css/assessment.css
@@ -72,13 +72,11 @@ div.message img.icon {
     vertical-align: middle;
 }
 
-div.growlUI { 
-	background: url(check48.png) no-repeat 10px 10px 
-}
 div.growlUI h1, div.growlUI h2 {
 	color: white; 
-	padding: 5px 5px 5px 0px; 
+	margin: 5px 5px 5px 0px; 
 	text-align: center;
+	font-size: 18px;
 }
 
 .question-numbers {
