LDEV-4059: small css changes to fix issue with autoresize buttons

--- a/lams_tool_images/web/includes/css/imageGallery.css
+++ b/lams_tool_images/web/includes/css/imageGallery.css
@@ -31,3 +31,7 @@ img.validationWarning, div.errors img.icon, div.messages img.icon {
 div.message img.icon {
     vertical-align: middle;
 }
+
+span.input-group-btn {
+    font-size:inherit;
+}
