LDEV-4061: Add overall completion chart in monitoring UI. Update d3.js to 3.x latest. Version 4 is not backwards compatible. Allow legend on hover instead of a static one next to the chart.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -234,6 +234,12 @@ td.contributeEntryCell a {
 	width: 100%;
 }
 
+#chartDiv {
+	width: 150px;
+	height: 150px;
+	padding: 0;
+}
+
 
 /********** SEQUENCE TAB STYLES **********/
 div#sequenceCanvas {
