--- a/lams_central/web/css/chart.css
+++ b/lams_central/web/css/chart.css
@@ -7,3 +7,14 @@
 	stroke: #000;
 	shape-rendering: crispEdges;
 }
+
+div.tooltip {	
+    position: absolute;			
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: #FFFFFF;
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;
+	opacity: 0;
+}
