--- a/lams_tool_preview/web/includes/css/learning.css
+++ b/lams_tool_preview/web/includes/css/learning.css
@@ -10,6 +10,12 @@
 .tablesorter tr.odd .jStar {
 	background-image: url(/lams/images/css/jquery.jRating-stars-light-blue.png)!important;
 }
+
+/* override the usual jrating greyed area */
+textarea[id^=comment-textarea-] {
+	color: inherit !important;
+}
+
 td.username {min-width: 150px;}
 td.rating {width:150px;}
 td.comment {min-width: 250px;}
