LDEV-4082: Slightly increase z-index of Open/Save dialogs so they cover whatever is on canvas.

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -172,6 +172,10 @@ div#exportLDDialog {
 	cursor: pointer;
 }
 
+div#ldStoreDialog {
+	z-index: 1051;
+}
+
 div#ldStoreDialogContents {
 	width: 100%;
 	height: 100%;
