LDEV-4137 make showNotificationsDialog() be accessible from integrations pages

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -71,6 +71,12 @@ input[type="checkbox"] {
 	padding: 5px;
 }
 
+.dialogContainer .modal-body {
+	height : 100%;
+	max-height: calc(100% - 56px);
+	padding: 0;
+}
+
 div.dialogListItem {
 	padding: 3px 0px 3px 0px;
 	cursor: pointer;
