LDEV-4218: Making the monitor entered messages a different colour. Fixed the marking screen so that it does not show the learner progress bar - had the wrong page type for the layout.

--- a/lams_tool_forum/web/css/jquery.treetable.forum.css
+++ b/lams_tool_forum/web/css/jquery.treetable.forum.css
@@ -54,9 +54,12 @@ table.treetable tr.expanded.accept td span.indenter a {
 }
 
 div.highlight {
-	border:2px solid #cacdd1; 
+	background-color: #fcf0ad;
 }
- 
+table.highlight {
+	background : none;
+}
+
 #clearfix:after { 
     content: " "; 
     display: block;
